Fix z-index on mobile dropdown and onboard popup

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ body {
 
 .bn-onboard-custom.bn-onboard-modal {
   font-family: Muli;
+  z-index: 99;
 }
